Added the rest of the joystick functions